chore: secure production configuration